--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <version>1.16.18</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sargue</groupId>
+            <artifactId>java-time-jsptags</artifactId>
+            <version>1.1.4</version>
+        </dependency>
 
     </dependencies>
     <build>
